--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+aniso8601==9.0.1
 blinker==1.8.2
 click==8.1.7
+flake8==7.1.1
 flask==3.0.3
+Flask-RESTful==0.3.10
 importlib-metadata==8.5.0
 itsdangerous==2.2.0
 jinja2==3.1.4
 MarkupSafe==3.0.2
+mccabe==0.7.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pytz==2024.2
+six==1.16.0
 werkzeug==3.1.2
 zipp==3.20.2
