--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,31 @@ blinker==1.8.2
 click==8.1.7
 dnspython==2.7.0
 email-validator==2.2.0
+exceptiongroup==1.2.2
 flake8==7.1.1
-flask==2.2.5
+Flask==2.2.5
 flask-mongoengine==1.0.0
 Flask-RESTful==0.3.10
 flask-wtf==1.2.2
 idna==3.10
 importlib-metadata==8.5.0
+iniconfig==2.1.0
 itsdangerous==2.2.0
 jinja2==3.1.4
 MarkupSafe==3.0.2
 mccabe==0.7.0
 mongoengine==0.29.1
+mongomock==4.3.0
+packaging==24.2
+pluggy==1.5.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
 pymongo==4.10.1
+pytest==8.3.5
 pytz==2024.2
+sentinels==1.0.0
 six==1.16.0
-werkzeug==3.1.2
+tomli==2.2.1
+Werkzeug==2.2.3
 wtforms==3.2.1
 zipp==3.20.2
